# still-passing-the-buck

./: .env.example  .gitattributes  .gitignore  CITATION.cff  Historical_CMPI_Extension.ipynb  Indicators.csv  LICENSE  Makefile  README.md  Still_Passing_the_Buck.ipynb  Transpose_Dataset.ipynb  Untitled.ipynb  WDIData.csv  pyproject.toml
.ipynb_checkpoints/: Still_Passing_the_Buck-checkpoint.ipynb
data/: README.md  REVISIONS.md  WDICountry-Series.csv  WDICountry.csv  WDIData.csv  WDIFootNote.csv  WDISeries-Time.csv  WDISeries.csv  paths.py
docs/: IMPROVEMENT_PLAN.md  paper-export.md
paper/: README.md  paper.md  preamble.tex  references.bib
scripts/: _gen_bcra_quasi_fiscal.py  _gen_historical_cmpi.py  _gen_paper_devaluation.py  adjust_fpi_debt.py  build_bcra_dec_dec.py  build_fpi_data.py  build_paper.py  cmpi_core.py  data_io.py  download_argentinadatos_api_cotizaciones-blue.py  download_argentinadatos_api_cotizaciones-ccl.py  download_bcra_api-monetarias.py  download_bcra_publicaciones_com3500.py  download_bcrp_estadisticas_pd04710xd.py  download_fed_h15-tips10y.py  download_finanzas_deuda_deuda-publica.py  download_finanzas_sector-publico_sector-publico-base-caja.py  download_github_still-passing-the-buck_data-a-2018.py  download_indec_economia_serie-ipc-divisiones.py  download_indec_economia_series-sipm-dic2015.py  download_indec_economia_sipm-dde1996.py  download_indec_economia_sipm-serie56-95.py  download_indec_poblacion_proyecciones-nacionales-2022-2040.py  download_mecon_datasets_totales-de-presupuesto.py  download_presidency_portraits.py  download_worldbank_api_indicators-arg.py  download_worldbank_wdi_wdi-csv.py  generate_exchange_bcra-dec-dec.py  generate_exchange_dec-dec-modern.py  generate_exchange_paper-devaluation.py  generate_exchange_parallel-cepo.py  generate_fiscal_bcra-quasi-fiscal.py  generate_fiscal_fpi-debt-adjustments.py  generate_fiscal_fpi-fiscal.py  generate_historical_data-a-2018-excel.py  generate_historical_historical-cmpi.py  generate_indicators_wdi-argentina.py  generate_inflation_bcra-monthly.py  generate_interest_wb-ids-arg.py  indicator_build.py  (+8 more)
tests/: test_bcra_series.py  test_cmpi_core.py  (+3 more)
(+115 files in other folders)
