[project]
name = "stillpassingthebuck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.14.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pip>=26.1.2",
]
